{
    "about": "About",
    "about_developers": "© $year The reddcoin_flutter Developers",
    "about_license": "Licensed under AGPL-3.0",
    "about_free": "This software is open source, free and does not come with any warranty. Use at your own risk.",
    "about_view_source": "About_source_code",
    "about_data_protection": "This software protects your data and privacy to the best of its abilities.\nThis app stores all necessary data locally on your device.\nThere is no analytics or advertising software inside.",
    "about_data_declaration": "View Privacy and Data Protection Declaration",
    "about_foundation": "This project is supported financially by the Reddcoin Foundation.\nPlease consider donating to the foundation, to further the development of this app.",
    "about_foundation_button": "Learn more about the Reddcoin Foundation",
    "about_help_or_feedback": "Do you need help or want to give feedback?",
    "about_translate": "You can help translating this app in the Reddcoin Weblate.",
    "about_go_weblate": "Open Weblate",
    "about_send_mail": "Send an Email",
    "add_coin_failed": "Adding wallet failed!",
    "add_new_wallet": "Add new wallet",
    "addressbook_add_new": "Add new address",
    "addressbook_bottom_bar_your_addresses": "Your Addresses",
    "addressbook_bottom_bar_sending_addresses": "Sending Addresses",
    "addressbook_dialog_remove_title": "Do you really want to remove this address?",
    "addressbook_dialog_remove_snack": "Address successfully removed",
    "addressbook_edit_dialog_title": "Edit label",
    "addressbook_edit_dialog_input": "New label",
    "addressbook_no_label": "no label",
    "addressbook_no_sending": "No addresses",
    "addressbook_search": "Insert addresses, labels",
    "addressbook_swipe_delete": "Delete",
    "addressbook_swipe_edit": "Edit",
    "addressbook_swipe_share": "Share",
    "addressbook_swipe_send": "Send to",
    "addressbook_title": "$coin Addresses",
    "app_navigation": "Navigation",
    "app_settings": "Settings",
    "app_settings_appbar": "App Settings",
    "app_settings_auth_header": "Authentication",
    "app_settings_biometrics": "Allow biometric authentification",
    "app_settings_changeCode": "Change PIN",
    "app_settings_default_wallet": "Default Wallet",
    "app_settings_language": "Language",
    "app_settings_language_restart": "Restarting the app is required.",
    "app_settings_newWallet": "Require to add new wallet",
    "app_settings_revealAuthButton": "Reveal authentication options",
    "app_settings_revealSeedButton": "Reveal seed phrase",
    "app_settings_seed": "Seed phrase",
    "app_settings_sendTransaction": "Require before sending a transaction",
    "app_settings_shareSeed": "Share seed",
    "app_settings_theme": "App Theme",
    "app_settings_theme_light": "Light",
    "app_settings_theme_dark": "Dark",
    "app_settings_theme_system": "System Default",
    "app_settings_walletHome": "Require for coin wallet",
    "app_settings_walletList": "Require for list of wallets",
    "app_settings_saved_snack": "Your changes have been saved",
    "app_settings_price_feed": "Price Feed & Currency",
    "app_settings_price_feed_enable_button": "Enable Price Feed API",
    "app_settings_price_feed_disable_button": "Disable Price Feed API",
    "app_settings_price_alert_content": "This will enable our privacy friendly price data feed.\nIt can be disabled anytime.",
    "app_wallets": "Wallets",
    "authenticate_biometric_hint": "Verify identity",
    "authenticate_biometric_reason": "Please authenticate.",
    "authenticate_biometric_title": "Authentication required",
    "authenticate_change_pin_success": "PIN succesfully changed",
    "authenticate_confirm_title": "Re-enter your PIN",
    "authenticate_confirm_title_new": "Re-enter your new PIN",
    "authenticate_retry_warning_text": "App will go into locked state and can only be unlocked with successful authentification.",
    "authenticate_retry_warning_title": "Warning, you only have one retry left.",
    "authenticate_subtitle_plural": "$retriesLeft attempts in total",
    "authenticate_subtitle_singular": "$retriesLeft attempt in total",
    "authenticate_title": "Please enter your PIN",
    "authenticate_title_new": "Please enter your new PIN",
    "buy_reddcoin": "Purchase Reddcoin",
    "buy_reddcoin_dialog_title": "You will now be forwarded to a third party website.",
    "buy_reddcoin_dialog_content": "The maintainers of this app are not responsible for its content.",
    "changelog_appbar": "Changelog",
    "changelog_headline": "What's new?",
    "continue": "Continue",
    "create_wallet_existing_seed": "Import existing seed",
    "create_wallet_new_seed": "Create wallet with new seed",
    "create_wallet_or": "or",
    "currency_ARS": "Argentine peso",
    "currency_BRL": "Brazilian real",
    "currency_CNY": "Chinese yuan renminbi",
    "currency_EUR": "Euro",
    "currency_GBP": "Pound sterling",
    "currency_HRK": "Croatian kuna",
    "currency_INR": "Indian rupee",
    "currency_RON": "Romanian leu",
    "currency_RUB": "Russian rouble",
    "currency_USD": "US Dollar",
    "currency_AUD": "Australian Dollar",
    "currency_KRW": "South Korean Won",
    "export_now": "Export now",
    "id": "Id",
    "import_seed": "Please enter the seed you wish to import.",
    "import_seed_button": "Import seed",
    "import_seed_error_1": "Must be 12 words or more",
    "import_seed_error_2": "Invalid seed",
    "jail_countdown": "seconds",
    "jail_dialog_button": "Okay",
    "jail_dialog_title": "You have reached the maximum number of retries.",
    "jail_heading": "App locked for",
    "label_keep_seed_safe": "Make sure to keep it safe.\nTreat it like a password.\nThose $numberOfWords simple words give full access to your wallet.",
    "label_wallet_seed": "Your wallet seed",
    "net_display_name": "Reddcoin $testormain net",
    "no_new_wallet": "No new wallets available at this time.",
    "not_again": "Don't show again",
    "paperwallet_confirm_import": "Confirm & Import",
    "paperwallet_error_1": "Wallet empty \nor amount below minimum output",
    "paperwallet_step_1": "Step 1",
    "paperwallet_step_1_text": "Scan public key",
    "paperwallet_step_2": "Step 2",
    "paperwallet_step_2_text": "Scan private key",
    "paperwallet_step_3": "Step 3",
    "paperwallet_step_3_text": "Check balance",
    "paperwallet_step_4": "Step 4",
    "paperwallet_step_4_text": "Empty wallet & import",
    "paperwallet_success": "Paper Wallet imported successfully.\nTransaction will appear very soon.",
    "reddcoin": "Reddcoin",
    "reddcoinC": "Reddcoin",
    "receive_enter_amount": "Please enter an amount",
    "receive_faucet": "Open faucet",
    "receive_obtain": "Obtain tRDD",
    "receive_requested_amount": "Requested amount (optional)",
    "receive_share": "Share",
    "receive_website": "Open website",
    "receive_website_credit": "Buy with credit card",
    "receive_website_description": "You can purchase Reddcoin directly with credit card (non US-costumers only) or from various exchanges and services.",
    "receive_website_exchandes": "Open list of exchanges",
    "receive_website_faucet": "You can receive free testnet coins on this faucet.",
    "scan_qr": "Scan QR-Code",
    "search": "Search",
    "select_coin": "Please select a coin",
    "send": "Send",
    "send_address": "Address",
    "send_amount": "Amount",
    "send_amount_below_minimum": "Minimum output is $amount. \nPlease choose an amount greater or equal to it.",
    "send_amount_below_minimum_unable": "Minimum output is $amount. \nYou don't have enough funds to pay for the fees.",
    "send_amount_exceeds": "Amount exceeds balance",
    "send_amount_small": "Amount too small",
    "send_confirm_send": "Confirm & Send",
    "send_confirm_transaction": "Please confirm transaction",
    "send_dust": "Dust: -$amount $letter_code",
    "send_enter_address": "Please enter an address",
    "send_enter_amount": "Please enter an amount",
    "send_errors_solve": "Please resolve errors …",
    "send_fee": "Fee: -$amount $letter_code",
    "send_invalid_address": "Invalid address",
    "send_label": "Label (optional)",
    "send_oops": "Something went wrong, please try again",
    "send_qr": "QR-Code",
    "send_to": " to ",
    "send_total": "Total $amount $letter_code",
    "send_transferring": "Transferring ",
    "server_add_title": "Add new server",
    "server_add_input_label": "Server URL",
    "server_add_input_empty": "Please enter a URL",
    "server_add_no_wss": "Must start with wss://\nOther protocols are currently not supported",
    "server_add_no_port": "Must contain a port, e.g. :50004",
    "server_add_server_exists": "Adding failed: Server already exists.",
    "server_add_server_no_connection": "Connection to server failed.",
    "server_add_server_wrong_genesis": "Genesis hash does not match.\nThis server does not support this coin.",
    "server_settings_title": "Server Settings",
    "server_settings_alert_generated_title": "Do you really want to remove this server?",
    "server_settings_alert_cancel": "Cancel",
    "server_settings_alert_hardcoded_title": "Hard coded server",
    "server_settings_alert_hardcoded_content": "Hard coded servers can not be deleted, only deactivated.",
    "server_settings_error_no_server_left": "At least one connectable server is required!",
    "setup_continue_alert_title": "Before you continue",
    "setup_continue_alert_content": "Make sure you have saved your seed phrase.\nYou can access it later on in the app settings.",
    "setup_create_pin": "Create PIN",
    "setup_import_title": "Import Seed",
    "setup_finish": "Finish Setup",
    "setup_import_note": "Please enter the wallet seed you wish to import.\nThis is not to be confused with a private key.",
    "setup_files_for_wallet": "Create all the necessary files to get started with your wallet.\nPlease choose your option.",
    "setup_pin": "Please set a PIN before you continue.",
    "setup_pin_title": "Security",
    "setup_pin_no_biometrics": "Your device does not support biometric authentication.",
    "setup_price_feed_allow": "Allow external price feed API",
    "setup_price_feed_description": "You can enable our optional external price feed here.\nThis will allow for your wallet balance to be displayed at real time exchange value.",
    "setup_price_feed_title": "External APIs",
    "setup_securebox_fail": "We are very sorry.\nYour device does not support a secure enough way of storing keys.",
    "setup_seed_slider_label": "Slide to change the number of words",
    "setup_welcome": "Welcome to Reddcoin Wallet",
    "share_app": "Share App",
    "snack_copied": "Copied to clipboard",
    "time": "Time",
    "transaction_details": "Transaction details",
    "transactions_all": "All",
    "transactions_fee": "-$amount \nFee",
    "transactions_in": "In",
    "transactions_none": "No transactions yet",
    "transactions_out": "Out",
    "tx_address": "Address",
    "tx_confirmations": "Confirmations",
    "tx_direction": "Direction",
    "tx_fee": "Fee",
    "tx_rejected": "Transaction rejected by network. Please try again.",
    "tx_value": "Value",
    "tx_view_in_explorer": "View in explorer",
    "unconfirmed": "unconfirmed",
    "wallet_bottom_nav_addr": "Addresses",
    "wallet_bottom_nav_receive": "Receive",
    "wallet_bottom_nav_send": "Send",
    "wallet_bottom_nav_tx": "Transactions",
    "wallet_connected": "connected",
    "wallet_offline": "offline",
    "wallet_pop_menu_paperwallet": "Import Paper Wallet",
    "wallet_pop_menu_rescan": "Rescan",
    "wallet_pop_menu_servers": "Adjust Servers",
    "wallet_receive": "Receive",
    "wallet_receive_label_hint": "Hint: Pressing this button will save the address label",
    "wallet_rescan_title": "Rescan wallet",
    "wallet_rescan_content": "Scans the wallet again. If you're having trouble with transactions or amounts, this might be helpful.\nThis might take a moment.",
    "wallet__send_label_hint": "Hint: Scanning the QR-Code will save you some time",
    "wallet_scan_appBar_title": "Scanning your imported seed",
    "wallet_scan_notice": "This might take a while. Don't close this screen!",
    "wallet_send": "Send",
    "wallet_transactions": "Transactions",
    "wallets_list": "Your wallets",
    "wallets_none": "You have no active wallets",
    "wallet_value_alert_title": "High value of coins",
    "wallet_value_alert_content": "Storing this value of coins in a mobile wallet is risky.\nConsider moving your coins to cold storage."
}
