...
              AppLocalizations.instance
                  .translate('setup_price_feed_description'),
              style: TextStyle(color: Colors.white),
              textAlign: TextAlign.center,
            ),
            SwitchListTile(
                key: Key('setupApiSwitchKey'),
                title: Text(
                    AppLocalizations.instance
                        .translate('setup_price_feed_allow'),
                    style: TextStyle(color: Colors.white)),
                value: _dataFeedAllowed,
                activeColor: Colors.white,
...
