...
                    padding: const EdgeInsets.symmetric(horizontal: 20),
                    child: Container(
                      color: Colors.white,
                      padding: EdgeInsets.all(20),
                      child: TextFormField(
                        textInputAction: TextInputAction.done,
                        key: Key('importTextField'),
                        controller: _controller,
                        validator: (value) {
                          if (value!.split(' ').length < 12) {
                            return AppLocalizations.instance.translate(
                              'import_seed_error_1',
                            );
...
